PR/45627: Martin Husemann: Plug memory leak